Fixing build troubles on Windows and MacOSX
git-svn-id: https://svn.apache.org/repos/asf/syncope/trunk@1436825 13f79535-47bb-0310-9956-ffa450edef68